--- a/flymine/dbmodel/resources/keyword_search.properties
+++ b/flymine/dbmodel/resources/keyword_search.properties
@@ -7,9 +7,9 @@ index.references.Publication = authors
 
 index.ignore = Comment CrossReference Homologue Interaction Image Location MicroArrayResult OntologyAnnotation OntologyTermSynonym OntologyRelation PhenotypeAnnotation ProteinStructure Reporter Sequence Synonym
 
-index.facet.single.Category = Category
+index.facet.multi.Category = Category
 index.facet.single.Organism = organism.shortName
-index.facet.multi.Pathway = pathways.name
+index.facet.single.Pathway = pathways.name
 
 index.boost.Gene = 1.5
 index.boost.Protein = 1.2
